# codebase-RAG

./: .env  .env.example  .env.logging  .gitignore  .pre-commit-config.yaml  .ragignore  ARCHITECTURE_DEEP_DIVE.md  Agent.md  CLAUDE.md  EXTRACTION_SUMMARY.md  FINAL_PROJECT_COMPLETION_REPORT.md  GRAPH_RAG_TOOLS.md  IMPORT_HIERARCHY.md  INTELLIGENT_CHUNKING_GUIDE.md  LICENSE  MANUAL_INDEXING_EXAMPLES.md  README.md  RESULTS.md  WAVE4_COMPLETION_SUMMARY.md  WAVE_3_0_COMPLETION_REPORT.md  WAVE_4_SUMMARY.md  WAVE_5_COMPLETION_REPORT.md  chunking_metrics.json  demo_mcp_usage.py  docker-compose.cache.yml  indexing_report_Agentic_RAG_20250701_125227.json  indexing_report_Agentic_RAG_20250701_130147.json  indexing_report_Agentic_RAG_20250701_135347.json  indexing_report_Agentic_RAG_20250701_141826.json  indexing_report_Agentic_RAG_20250701_230802.json  indexing_report_psme_20250701_160330.json  manual_indexing.py  mcp_server  process-task-list.mdc  progress  pyproject.toml  redis.conf  register_mcp.sh  run_graph_rag_performance_tests.py  run_performance_tests.py  (+15 more)
ai_docs/: create-prd.md  extra_info.json  generate-tasks.mdc  mcp-tools-testing-plan.md  parallelize.md  process-task-list.mdc  task_1.3_completion_report.md
docs/: ADVANCED.md  ARCHITECTURE_DEEP_DIVE.md  BEST_PRACTICES.md  DEPLOYMENT_GUIDE.md  FEATURES.md  FUNCTION_CALL_DETECTION_CONFIG.md  GRAPH_RAG_ARCHITECTURE.md  IMPORT_HIERARCHY.md  INTEGRATION.md  LOGGING_GUIDE.md  MANUAL_INDEXING_EXAMPLES.md  MCP_TOOLS.md  SECURITY_REVIEW.md  SETUP.md  cache-architecture.md  cache-configuration.md  cache-deployment-setup.md  cache-development-extension.md  cache-integration-patterns.md  cache-management-maintenance.md  cache-monitoring-metrics.md  cache-performance-optimization.md  cache-security-encryption.md  cache-troubleshooting.md
progress/: FINAL_PROJECT_COMPLETION_SUMMARY.md  enhanced-function-call-detection-wave-1.0-summary.md  enhanced-function-call-detection-wave-2.0-summary.md  enhanced-function-call-detection-wave-3.0-summary.md  enhanced-function-call-detection-wave-4.0-summary.md  enhanced-function-call-detection-wave-5.0-COMPLETION.md  enhanced-function-call-detection-wave-task-1.1.md  enhanced-function-call-detection-wave-task-1.2.md  enhanced-function-call-detection-wave-task-1.3.md  enhanced-function-call-detection-wave-task-1.4.md  enhanced-function-call-detection-wave-task-1.5.md  enhanced-function-call-detection-wave-task-2.1.md  enhanced-function-call-detection-wave-task-2.2.md  enhanced-function-call-detection-wave-task-2.3.md  enhanced-function-call-detection-wave-task-2.4.md  enhanced-function-call-detection-wave-task-2.5.md  enhanced-function-call-detection-wave-task-4.1.md  enhanced-function-call-detection-wave-task-5.1.md  enhanced-function-call-detection-wave-task-5.2.md  enhanced-function-call-detection-wave-task-5.3.md  enhanced-function-call-detection-wave-task-5.5.md  enhanced-function-call-detection-wave.json  function-chain-mcp-tools-COMPLETION-REPORT.md  function-chain-mcp-tools-wave-1.0-summary.md  function-chain-mcp-tools-wave-2.0-summary.md  function-chain-mcp-tools-wave-3.0-completion-report.md  function-chain-mcp-tools-wave-task-1.1.md  function-chain-mcp-tools-wave-task-3.1.md  function-chain-mcp-tools-wave-task-3.2.md  function-chain-mcp-tools-wave-task-3.3.md  function-chain-mcp-tools-wave-task-3.4.md  function-chain-mcp-tools-wave-task-3.8.md  function-chain-mcp-tools-wave-task-4.1.md  function-chain-mcp-tools-wave-task-4.2.md  function-chain-mcp-tools-wave-task-4.3.md  function-chain-mcp-tools-wave-task-4.4.md  function-chain-mcp-tools-wave-task-4.5.md  function-chain-mcp-tools-wave-task-4.6.md  function-chain-mcp-tools-wave-task-4.7.md  function-chain-mcp-tools-wave-task-4.8.md  (+30 more)
reports/: subtask-12.1.5-completion-report.md  subtask-9.1.4-report.md  subtask-9.1.5-report.md  task-8.0-completion-report.md  wave_16_0_completion_report.md  wave_16_0_performance_testing_report.json
scripts/: README.md  quick-validate.sh  test-workflows-locally.sh  validate_cache_system.py
src/: init_logging.py  main.py  mcp_prompts.py  mcp_prompts.test.py  mcp_tools.py  mcp_tools_compat.py  register_mcp_prompts_compat.py  run_mcp.py  test_chunking_integration.py  test_real_code_analysis.py
tasks/: clear-file-metadata-tool-path-matching-fix.md  comprehensive-path-matching-audit.md  function-chain-mcp-tools-feature-plan.md  graph-edge-type-mismatch-analysis.md  graph-node-attribute-loss-investigation.md  graph-rag-tools-fix-report.md  graph-rag-tools-troubleshooting-report.md  graph_trace_performance_optimization.md  lightrag-pathrag-analysis-and-improvement-recommendations.md  pathrag-implementation-enhancement-plan.md  prd-advanced-cross-project-search.md  prd-agentic-rag-performance-enhancement.md  prd-chunktype-file-attribute-fix.md  prd-codebase-rag-mcp.md  prd-documentation-modernization.md  prd-enhanced-explore-project.md  prd-enhanced-function-call-detection.md  prd-function-chain-mcp-tools.md  prd-graph-rag-enhancement.md  prd-incremental-indexing.md  prd-intelligent-chunking-system-repair.md  prd-intelligent-code-chunking.md  prd-large-codebase-indexing-optimization.md  prd-large-file-refactoring.md  prd-mcp-prompts-guided-workflows.md  prd-mcp-system-refactoring.md  prd-point-id-database-fix.md  prd-query-caching-layer.md  prd-remaining-prompts-implementation.md  prd-search-functionality-bug-fixes.md  prd-simplify-multi-modal-search-output.md  search-functionality-investigation.md  session-mcp-tools-testing-fix.md  task-1.4-intelligent-path-finding-implementation-report.md  tasks-prd-advanced-cross-project-search.md  tasks-prd-agentic-rag-performance-enhancement.md  tasks-prd-chunktype-file-attribute-fix.md  tasks-prd-codebase-rag-mcp.md  tasks-prd-documentation-modernization.md  tasks-prd-enhanced-explore-project.md  (+19 more)
tests/: pytest.ini  run_tests.py  test_advance_search_prompt.py  test_advanced_search_tool.py  test_api.py  test_cache_corruption_scenarios.py  test_cache_eviction_scenarios.py  test_cache_hit_miss_validation.py  test_cache_load_testing.py  test_cache_memory_profiling.py  (+37 more)
(+337 files in other folders)
